volume controlado x key + volume_value in real time

--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -146,44 +146,26 @@
         <div> <input type="file" id="ruta_archivo4"> </div>
       </div>
     </main>
-
+<!--
     <sidebar class="sidebar" id="sidebar derecha">
       sidebar derecha
       <div class="playlist" id="playlist"> </div>
     </sidebar>
-
+-->
     <bloque1 class="bloque1" id="bloque1">
       <div class="playlist" id="playlistfrescos"> </div>
     </bloque1>
 
 
     <footer class="footer">
-      <div id="icon">
-        <div class="icono" id="face_icon">
-          <a href="https://es-la.facebook.com/" target="_blank" title="Ir a Facebook"><img src="img/facebook.svg"
-              alt="facebook"> </a>
-        </div>
-        <div class="icono" id="insta_icon">
-          <a href="https://instagram.com" target="_blank" title="Ir a Instagram"><img src="img/instagram.svg"
-              alt="instagram"></a>
 
-        </div>
-        <div class="icono" id="twitter_icon">
-          <a href="https://twitter.com/home?lang=es" target="_blank" title="Ir a Twitter"><img src="img/twitter.svg"
-              alt="twitter"></a>
-        </div>
-        <div class="icono" id="youtube_icon">
-          <a href="https://www.youtube.com/" target="_blank" title="Ir a Youtube"><img src="img/youtube.svg"
-              alt="youtube"></a>
-        </div>
-      </div>
+      <div class="playlist" id="playlist"> </div>
+
       <div>
-
         © Producer E87
         <br>Bedbugs(banda)
         <br>
         escuchando a un forro (programa de radio).
-
       </div>
     </footer>
   </div>
