Full Keys (-restaPlayrate)

--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -45,7 +45,7 @@
           <p id="autoplay_1_text"></p>
           <p id="volume_1_text"></p>
           <p id="volume_1_value"></p>
-          <input type='range' min=0 max=1 step='0.01' value=1 id='volume_1' onclick="controls_1_volume()">
+          <input type='range' min=0 max=1 step='0.01' value=1 id='volume_1' >
           <br>
           <p id="play_Rate_1_text"></p>
           <p id="play_Rate_1_value"></p>
