added mp3 01 that was missing

--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -5,18 +5,16 @@
   <meta charset="utf-8" />
   <meta http-equiv="" X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
- <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
- <!--
+
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  <!--
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
  -->
   <link rel="STYLESHEET" href="css/brazil.css">
   <link rel="icon" href="img/html.ico">
-<!--
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+<!--  -->  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
--->
   <title>Brazil 2050</title>
 </head>
 
@@ -45,7 +43,7 @@
           <p id="autoplay_1_text"></p>
           <p id="volume_1_text"></p>
           <p id="volume_1_value"></p>
-          <input type='range' min=0 max=1 step='0.01' value=1 id='volume_1' >
+          <input type='range' min=0 max=1 step='0.01' value=1 id='volume_1'>
           <br>
           <p id="play_Rate_1_text"></p>
           <p id="play_Rate_1_value"></p>
@@ -146,7 +144,7 @@
         <div> <input type="file" id="ruta_archivo4"> </div>
       </div>
     </main>
-<!--
+    <!--
     <sidebar class="sidebar" id="sidebar derecha">
       sidebar derecha
       <div class="playlist" id="playlist"> </div>
