audio.currentTime working

--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -26,7 +26,7 @@
       <input class="checkbox" type="checkbox" name="local_checkbox" id="local_checkbox">
       Local
       <p id="teclaApretada"></p>
-      <div>1 FALTA PROGRESS BAR + CURRENT TIME</div>
+      <div>1 FALTA: Load PROGRESS BAR// CHANGE POSITION WHEN USING SLIDER </div>
       <div class="audio_controls" id="audio_controls">
         <div class="deposito" id="deposito_1"> </div>
         <p id="player_1_label"></p>
@@ -48,6 +48,7 @@
           <p id="play_Rate_1_text"></p>
           <p id="play_Rate_1_value"></p>
           <input type='range' min=0 max=1 step='0.01' value=1 id='playRate_1'>
+          <p id="actual_Position_text"></p>
           <p id="currentPosition_1">Current position </p>
           <input type='range' min=0 max=1 step='0.01' value=0 id='current_1' onclick="control_1_current()">
           <p id="duracion_1_text"></p>
