--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -22,13 +22,24 @@
   <div class="contenedor">
     <header class="header" id="header"> Producer E87
     </header>
+    <fixed id="fixed">
+      <p id="fixed_volume_1_text"></p>
+      <p id="fixed_volume_1_value"></p>
+      current position 1
+      <p id="fixed_volume_2_text"></p>
+      <p id="fixed_volume_2_value"></p>
+      <p id="fixed_volume_3_text"></p>
+      <p id="fixed_volume_3_value"></p>
+      <p id="fixed_volume_4_text"></p>
+      <p id="fixed_volume_4_value"></p>
+    </fixed>
     <main class="main">
       <input class="checkbox" type="checkbox" name="local_checkbox" id="local_checkbox">
       Local
       <p id="teclaApretada"></p>
       <div>1 FALTA: Load PROGRESS BAR// CHANGE POSITION WHEN USING SLIDER </div>
       <div class="audio_controls" id="audio_controls">
-        <div class="deposito" id="deposito_1"> </div>
+        <div class="deposito" id="deposito_1"><div>progress_1 <div>progress_1_bar</div></div> </div>
         <p id="player_1_label"></p>
         <audio id="myAudio">
           <source src="" type="audio/mpeg" id="snd_header">
@@ -47,12 +58,12 @@
           <br>
           <p id="play_Rate_1_text"></p>
           <p id="play_Rate_1_value"></p>
-          <input type='range' min=0 max=1 step='0.01' value=1 id='playRate_1'>
-          <p id="actual_Position_text"></p>
+          <input type='range' min=-0 max=1 step='0.01' value=1 id='playRate_1'>
+          <p id="actual_Position_text_1"></p>
           <p id="currentPosition_1">Current position </p>
-          <input type='range' min=0 max=1 step='0.01' value=0 id='current_1' onclick="control_1_current()">
-          <p id="duracion_1_text"></p>
-          <p id="duracion_1_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=0 id='current_1'>
+          <p id="duration_1_text"></p>
+          <p id="duration_1_value"></p>
         </div>
         <!--si saco este input desaparece la lista del array_Canciones a la izquierda-->
         <div> <input type="file" id="ruta_archivo"> </div>
@@ -80,10 +91,11 @@
           <p id="play_Rate_2_value"></p>
           <input type='range' min=0 max=1 step='0.01' value=1 id='playRate_2'>
         </div>
+        <p id="actual_Position_text_2"></p>
         <p id="currentPosition_2">Current position </p>
         <input type='range' min=0 max=1 step='0.01' value=0 id='current_2' onclick="control_2_current()">
-        <p id="duracion_2_text"></p>
-        <p id="duracion_2_value"></p>
+        <p id="duration_2_text"></p>
+        <p id="duration_2_value"></p>
         <div> <input type="file" id="ruta_archivo2"> </div>
       </div>
       <div>3</div>
@@ -108,10 +120,11 @@
           <p id="play_Rate_3_text"></p>
           <p id="play_Rate_3_value"></p>
           <input type='range' min=0 max=1 step='0.01' value=1 id='playRate_3'>
+          <p id="actual_Position_text_3"></p>
           <p id="currentPosition_3">Current position </p>
           <input type='range' min=0 max=1 step='0.01' value=0 id='current_3' onclick="control_3_current()">
-          <p id="duracion_3_text"></p>
-          <p id="duracion_3_value"></p>
+          <p id="duration_3_text"></p>
+          <p id="duration_3_value"></p>
         </div>
         <div> <input type="file" id="ruta_archivo3"> </div>
       </div>
@@ -137,10 +150,11 @@
           <p id="play_Rate_4_text"></p>
           <p id="play_Rate_4_value"></p>
           <input type='range' min=0 max=1 step='0.01' value=1 id='playRate_4'>
+          <p id="actual_Position_text_4"></p>
           <p id="currentPosition_4">Current position </p>
           <input type='range' min=0 max=1 step='0.01' value=0 id='current_4' onclick="control_4_current()">
-          <p id="duracion_4_text"></p>
-          <p id="duracion_4_value"></p>
+          <p id="duration_4_text"></p>
+          <p id="duration_4_value"></p>
         </div>
         <div> <input type="file" id="ruta_archivo4"> </div>
       </div>
@@ -163,6 +177,8 @@
       <div>
         © Producer E87
         <br>Bedbugs(banda)
+        <br>
+        Never mess with the IT guy
         <br>
         escuchando a un forro (programa de radio).
       </div>
