--- a/TonejsTest.html
+++ b/TonejsTest.html
@@ -36,6 +36,7 @@
             <a href="2 OSC STEREO PANNED.html"> 2osc</a>
             <a href="ASCommando.html"> ASCommando</a>
             <a href="Seq.html"> Seq</a>
+            <a href="latest.html"> latest</a>
             <a href="tone.html"> Tone</a>
             <a href="tone2.html"> Tone2</a>
         </div>
