--- a/latest.html
+++ b/latest.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <h1>2 OSC</h1>
+  <h1>latest</h1>
   <br>
 
   <label for="bpm">BPM</label>
@@ -54,7 +54,7 @@
  
   <br>
 
-  <script src="latest.js">    </script>
+  <script src="js/latest.js">    </script>
 
 </body>
 </html>
