--- a/TonejsTest.html
+++ b/TonejsTest.html
@@ -5,11 +5,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="" X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="icon" href="img/html.ico" type 
-    flaticon.com SACAR ICONOS DE AHI
-    BAJAR COMO IMAGEN PNG
-
-    -->
     <link rel="STYLESHEET" href="css/estilos.css">
     <title>Tone Js Test Area</title>
 
@@ -39,6 +34,10 @@
             <a href="latest.html"> latest</a>
             <a href="tone.html"> Tone</a>
             <a href="tone2.html"> Tone2</a>
+        </div>
+        <div>
+            <a href="SintesVarios.html"> AMSynth</a>
+
         </div>
     </nav>
 </div>
