--- a/collage/fotografias.html
+++ b/collage/fotografias.html
@@ -23,62 +23,58 @@
       <a href="telas.html"> Telas</a>
       <a href="maquinas.html"> Papel</a>
       <a href="misc.html">Misc</a>
-  </nav>
+    </nav>
     <main class="main">
       <div>
-        Material fotográfico 
+        <a href="ruptura.html">Ruptura (soy un botón)</a>
+        <br><br><br>
+        Material fotográfico
         <br><br><br>
 
         <div>
-          <img src="img/fotos/01.jpg" style="width:100%" style="height:80%">
+          <img src="img/fotos/01.jpg" style="width:50%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
         <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-          <img src="img/fotos/02.jpg" style="width:100%" style="height:80%">
+          <img src="img/fotos/02.jpg" style="width:50%" style="height:40%">
           <div class="text">Sad Frown Clown</div>
         </div>
         <br><br> <br><br>
 
-        <div> 
-          <img src="img/fotos/03.jpg" style="width:100%" style="height:80%">
+        <div>
+          <img src="img/fotos/03.jpg" style="width:50%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
-        <div> 
-          <img src="img/fotos/05.jpg" style="width:100%" style="height:80%">
+        <div>
+          <img src="img/fotos/06.jpg" style="width:50%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
-        <div> 
-          <img src="img/fotos/06.jpg" style="width:100%" style="height:80%">
+        <div>
+          <img src="img/fotos/07.jpg" style="width:50%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
-        <div> 
-          <img src="img/fotos/07.jpg" style="width:100%" style="height:80%">
+        <div>
+          <img src="img/fotos/08.jpg" style="width:50%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
-        <div> 
-          <img src="img/fotos/08.jpg" style="width:100%" style="height:80%">
+        <div>
+          <img src="img/fotos/09.jpg" style="width:50%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
-        <div> 
-          <img src="img/fotos/09.jpg" style="width:100%" style="height:80%">
-          <div class="text"></div>
-        </div>
-        <br><br> <br><br>
-
-        <div> 
-          <img src="img/fotos/10.jpg" style="width:100%" style="height:80%">
+        <div>
+          <img src="img/fotos/10.jpg" style="width:50%" style="height:40%">
           <div class="text"></div>
         </div>
 
