01 10 24 Collage con Diapos

--- a/collage/fotografias.html
+++ b/collage/fotografias.html
@@ -22,13 +22,15 @@
       <a href="fotografias.html"> Fotos</a>
       <a href="telas.html"> Telas</a>
       <a href="maquinas.html"> Papel</a>
+      <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
     </nav>
     <main class="main">
       <div>
+        <div class="imagenes">
         <a href="ruptura.html">Ruptura (soy un botón)</a>
-        <br><br><br>
-        Material fotográfico
+        <br><br>
+       <h3> Material fotográfico </h3>
         <br><br><br>
 
         <div>
@@ -77,7 +79,7 @@
           <img src="img/fotos/10.jpg" style="width:50%" style="height:40%">
           <div class="text"></div>
         </div>
-
+      </div>
     </main>
   </div>
 </body>
