--- a/collage/misc.html
+++ b/collage/misc.html
@@ -22,68 +22,27 @@
       <a href="fotografias.html"> Fotos</a>
       <a href="telas.html"> Telas</a>
       <a href="maquinas.html"> Papel</a>
+      <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
-  </nav>
+    </nav>
     <main class="main">
       <div>
-       Telas
         <br><br><br>
+        <h3>Miscelanea</h3>
+        <br><br><br>
+        <div class="imagenes">
+          <div>
+            <img src="img/telas/90.jpg" style="width:50%" style="height:40%">
+            <div class="text"></div>
+          </div>
+          <br><br> <br><br>
 
-        <div> 
-          <img src="img/telas/90.jpg" style="width:100%" style="height:80%">
-          <div class="text"></div>
+          <div>
+            <img src="img/telas/11.jpg" style="width:50%" style="height:40%">
+            <div class="text"></div>
+          </div>
+          <br><br> <br><br>
         </div>
-        <br><br> <br><br>
-
-        <div>
-          <img src="img/telas/11.jpg" style="width:100%" style="height:80%">
-          <div class="text"></div>
-        </div>
-        <br><br> <br><br>
-
-        <div>
-          <img src="img/telas/94.jpg" style="width:100%" style="height:80%">
-          <div class="text"></div>
-        </div>
-        <br><br> <br><br>
-
-        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-          <img src="img/telas/15.jpg" style="width:100%" style="height:80%">
-          <div class="text">Sin título</div>
-        </div>
-        <br><br> <br><br>
-
-        <div> 
-          <img src="img/telas/16.jpg" style="width:100%" style="height:80%">
-          <div class="text"></div>
-        </div>
-        <br><br> <br><br>
-
-        <div> 
-          <img src="img/telas/31.jpg" style="width:100%" style="height:80%">
-          <div class="text"></div>
-        </div>
-        <br><br> <br><br>
-
-        <div> 
-          <img src="img/telas/91.jpg" style="width:100%" style="height:80%">
-          <div class="text"></div>
-        </div>
-        <br><br> <br><br>
-
-        <div> 
-          <img src="img/telas/33.jpg" style="width:100%" style="height:80%">
-          <div class="text"></div>
-        </div>
-        <br><br> <br><br>
-
-        <div> 
-          <img src="img/telas/24.jpg" style="width:100%" style="height:80%">
-          <div class="text"></div>
-        </div>
-        <br><br> <br><br>
-
-        
     </main>
   </div>
 </body>
