--- a/collage/ruptura.html
+++ b/collage/ruptura.html
@@ -22,14 +22,20 @@
       <a href="fotografias.html"> Fotos</a>
       <a href="telas.html"> Telas</a>
       <a href="maquinas.html"> Papel</a>
+      <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
     </nav>
     <main class="main">
       <div>
-        Ruptura
         <br><br><br>
-        La obra consiste de dos collages, cada uno acompañado por un album de fotos propio
+        <h3>Ruptura</h3>
         <br><br><br>
+        <h1>
+        La obra consiste de dos collages, cada uno acompañado por un album de fotos 
+      </h1>
+        <br><br><br>
+        <div class="imagenes">
+        
         <div>
           <div class="text"><h1>Ruptura (Half the man I use to be)</h1></div>
           <img src="img/fotos/ruptura/Ruptura (Half the man I use to be).jpg" style="width:100%" style="height:80%">
@@ -274,7 +280,7 @@
           <div class="text"></div>
         </div>
         <br><br> <br><br>
-
+      </div>
         <!--  -->
     </main>
   </div>
