--- a/collage/scrapbook2.html
+++ b/collage/scrapbook2.html
@@ -23,11 +23,12 @@
       <a href="fotografias.html"> Fotos</a>
       <a href="telas.html"> Telas</a>
       <a href="maquinas.html"> Papel</a>
+      <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
   </nav>
 
     <main class="main">
-      <div class="botones">
+      <div class="imagenes">
         <a href="scrapbook1.html"> scrapbook 1</a>
         <a href="scrapbook3.html"> scrapbook 3</a>
         <a href="stock.html"> stock</a>
