--- a/collage/stock.html
+++ b/collage/stock.html
@@ -22,16 +22,17 @@
       <a href="fotografias.html"> Fotos</a>
       <a href="telas.html"> Telas</a>
       <a href="maquinas.html"> Papel</a>
+      <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
   </nav>
     <main class="main">
-      <div class="botones">
+      <div class="imagenes">
         <a href="scrapbook1.html"> scrapbook 1</a>
         <a href="scrapbook2.html"> scrapbook 2</a>
         <a href="scrapbook3.html"> scrapbook 3</a>
         
         <br><br>
-        <h3>Control de costos</h3>
+        <h3>Control de stock</h3>
         <br><br><br>
         <div>
           <img src="img/stock/Tapa.jpg" style="width:100%" style="height:80%">
