--- a/collage/scrapbook1.html
+++ b/collage/scrapbook1.html
@@ -22,11 +22,12 @@
       <a href="fotografias.html"> Fotos</a>
       <a href="telas.html"> Telas</a>
       <a href="maquinas.html"> Papel</a>
+      <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
   </nav>
 
     <main class="main">
-      <div class="botones">
+      <div class="imagenes">
         <a href="scrapbook2.html"> scrapbook 2  </a>
         <a href="scrapbook3.html"> scrapbook 3   </a>
         <a href="stock.html"> stock</a>
