Cachuzo arreglado quizas?

--- a/cachuzo/scrapbook1.html
+++ b/cachuzo/scrapbook1.html
@@ -6,7 +6,7 @@
   <meta http-equiv="" X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="img/html.ico">
-  <link rel="STYLESHEET" href="css/collage.css">
+  <link rel="STYLESHEET" href="css/cachuzo.css">
   <title>Collage</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,12 +24,13 @@
       <a href="maquinas.html"> Papel</a>
       <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
-  </nav>
+    </nav>
 
     <main class="main">
-      <div class="imagenes">
-        <a href="scrapbook2.html"> scrapbook 2  </a>
-        <a href="scrapbook3.html"> scrapbook 3   </a>
+      <div class="botones">
+
+        <a href="scrapbook2.html"> scrapbook 2 </a>
+        <a href="scrapbook3.html"> scrapbook 3 </a>
         <a href="stock.html"> stock</a>
         <br><br>
         <h3>ScrapBook 1</h3>
@@ -160,7 +161,7 @@
           <div class="text"></div>
         </div>
         <br><br> <br><br>
-        
+
         <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
           <img src="img/sb1/22.jpg" style="width:100%" style="height:80%">
           <div class="text"></div>
