--- a/collage.html
+++ b/collage.html
@@ -6,7 +6,7 @@
   <meta http-equiv="" X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="img/html.ico">
-  <link rel="STYLESHEET" href="cachuzo/css/cachuzo.css">
+  <link rel="STYLESHEET" href="css/collage.css">
   <title>Collage</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,13 +23,13 @@
       <a href="cachuzo/telas.html"> Telas</a>
       <a href="cachuzo/maquinas.html"> Papel</a>
       <a href="cachuzo/misc.html">Misc</a>
-  </nav>
- 
+    </nav>
+
     <main class="main">
       <div>
-<br><br><br>
+
       </div>
-      <br><br> <br><br>
+
     </main>
 
   </div>
