Cachuzo incluye misc y ropa

--- a/cachuzo/fotografias.html
+++ b/cachuzo/fotografias.html
@@ -21,6 +21,7 @@
       <a href="scrapbook1.html"> Libros</a>
       <a href="fotografias.html"> Fotos</a>
       <a href="telas.html"> Telas</a>
+      <a href="ropa.html"> Ropa</a>
       <a href="maquinas.html"> Papel</a>
       <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
@@ -34,49 +35,49 @@
         <br><br><br>
 
         <div>
-          <img src="img/fotos/01.jpg" style="width:50%" style="height:40%">
+          <img src="img/fotos/01.jpg" style="width:100%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
         <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-          <img src="img/fotos/02.jpg" style="width:50%" style="height:40%">
+          <img src="img/fotos/02.jpg" style="width:100%" style="height:40%">
           <div class="text">Sad Frown Clown</div>
         </div>
         <br><br> <br><br>
 
         <div>
-          <img src="img/fotos/03.jpg" style="width:50%" style="height:40%">
+          <img src="img/fotos/03.jpg" style="width:100%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
         <div>
-          <img src="img/fotos/06.jpg" style="width:50%" style="height:40%">
+          <img src="img/fotos/06.jpg" style="width:100%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
         <div>
-          <img src="img/fotos/07.jpg" style="width:50%" style="height:40%">
+          <img src="img/fotos/07.jpg" style="width:100%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
         <div>
-          <img src="img/fotos/08.jpg" style="width:50%" style="height:40%">
+          <img src="img/fotos/08.jpg" style="width:100%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
         <div>
-          <img src="img/fotos/09.jpg" style="width:50%" style="height:40%">
+          <img src="img/fotos/09.jpg" style="width:100%" style="height:40%">
           <div class="text"></div>
         </div>
         <br><br> <br><br>
 
         <div>
-          <img src="img/fotos/10.jpg" style="width:50%" style="height:40%">
+          <img src="img/fotos/10.jpg" style="width:100%" style="height:40%">
           <div class="text"></div>
         </div>
       </div>
