--- a/cachuzo/scrapbook1.html
+++ b/cachuzo/scrapbook1.html
@@ -21,6 +21,7 @@
       <a href="scrapbook1.html"> Libros</a>
       <a href="fotografias.html"> Fotos</a>
       <a href="telas.html"> Telas</a>
+      <a href="ropa.html"> Ropa</a>
       <a href="maquinas.html"> Papel</a>
       <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
@@ -28,10 +29,12 @@
 
     <main class="main">
       <div class="botones">
-
         <a href="scrapbook2.html"> scrapbook 2 </a>
         <a href="scrapbook3.html"> scrapbook 3 </a>
         <a href="stock.html"> stock</a>
+      </div>
+
+      <div class="imagenes">
         <br><br>
         <h3>ScrapBook 1</h3>
         <br><br><br>
