--- a/cachuzo/diapos.html
+++ b/cachuzo/diapos.html
@@ -21,6 +21,7 @@
       <a href="scrapbook1.html"> Libros</a>
       <a href="fotografias.html"> Fotos</a>
       <a href="telas.html"> Telas</a>
+      <a href="ropa.html"> Ropa</a>
       <a href="maquinas.html"> Papel</a>
       <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
@@ -28,136 +29,136 @@
     <main class="main">
       <div>
         <br><br><br>
-<h3>Diapos</h3>        
+        <h3>Lugares que me invento (Diapos)</h3>
         <br><br><br>
         <div class="imagenes">
           <div>
-            <img src="img/diapos/1.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/1.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/3.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/3.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/4.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/4.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/diapos/5.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/5.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/6.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/6.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/7.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/7.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/8.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/8.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/9.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/9.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/10.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/10.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/11.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/11.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/12.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/12.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/13.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/13.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/14.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/14.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/15.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/15.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/16.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/16.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/17.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/17.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/18.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/18.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/19.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/19.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/20.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/20.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/22a.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/22a.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/diapos/22b.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/22b.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
           <div>
-            <img src="img/diapos/21.jpg" style="width:50%" style="height:40%">
+            <img src="img/diapos/21.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
