--- a/cachuzo/maquinas.html
+++ b/cachuzo/maquinas.html
@@ -21,6 +21,7 @@
       <a href="scrapbook1.html"> Libros</a>
       <a href="fotografias.html"> Fotos</a>
       <a href="telas.html"> Telas</a>
+      <a href="ropa.html"> Ropa</a>
       <a href="maquinas.html"> Papel</a>
       <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
@@ -28,180 +29,198 @@
 
     <main class="main">
       <div>
+
+        <div class="imagenes">
+          <div>
+            <br><br><br>
+            <h3>Varios</h3>
+            <br><br><br>
+            <img src="img/maquinas/A face.jpg" style="width:100%" style="height:40%">
+            <div class="text">A face</div>
+          </div>
+          <br><br> <br><br>
+          <div>
+            <img src="img/maquinas/And the frightening monster asked what can I do 4 u.jpg" style="width:100%"
+              style="height:40%">
+            <div class="text">And the frightening monster asked what can I do 4 u</div>
+          </div>
+          <br><br> <br><br>
+        </div>
+
         <br><br><br>
-      <h3>maquinas</h3>        
+        <h3>maquinas</h3>
         <br><br><br>
         <div class="imagenes">
           <div>
-            <img src="img/maquinas/01.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/01.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/02.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/02.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/03.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/03.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/05.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/05.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/06.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/06.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/07.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/07.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/08.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/08.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/09.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/09.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/10.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/10.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/11.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/11.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/12.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/12.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/13.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/13.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/14.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/14.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/15.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/15.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/16.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/16.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/17.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/17.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/18.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/18.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/19.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/19.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/20.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/20.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/21.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/21.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/22.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/22.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/23.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/23.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/24.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/24.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/25.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/25.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/26.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/26.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/27.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/27.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/28.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/28.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/29.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/29.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/30.jpg" style="width:50%" style="height:40%">
+            <img src="img/maquinas/30.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
