--- a/cachuzo/ropa.html
+++ b/cachuzo/ropa.html
@@ -29,55 +29,61 @@
     <main class="main">
       <div>
         <br><br><br>
-        <h3>Telas</h3>
+        <h3>Ropas</h3>
         <br><br><br>
         <div class="imagenes">
           <div>
-            <img src="img/telas/90.jpg" style="width:100%" style="height:80%">
+            <img src="img/ropa/jacket.JPG" style="width:100%" style="height:80%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/telas/11.jpg" style="width:100%" style="height:40%">
+            <img src="img/ropa/jacket interior.JPG" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/telas/94.jpg" style="width:100%" style="height:40%">
+            <img src="img/ropa/camisa lino.JPG" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/telas/15.jpg" style="width:100%" style="height:40%">
+            <img src="img/ropa/remera gris.JPG" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/telas/16.jpg" style="width:100%" style="height:40%">
+            <img src="img/ropa/buzo retazos.JPG" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/telas/31.jpg" style="width:100%" style="height:40%">
+            <img src="img/ropa/buzo tricolor.JPG" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/telas/91.jpg" style="width:100%" style="height:40%">
+            <img src="img/ropa/buzo tricolor back.JPG" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
           <br><br> <br><br>
 
           <div>
-            <img src="img/telas/33.jpg" style="width:100%" style="height:40%">
+            <img src="img/ropa/camperon front.JPG" style="width:100%" style="height:40%">
             <div class="text"></div>
           </div>
+
+          <div>
+            <img src="img/ropa/camperon back.JPG" style="width:100%" style="height:40%">
+            <div class="text"></div>
+          </div>
+
           <br><br> <br><br>
         </div>
     </main>
