--- a/cachuzo/stock.html
+++ b/cachuzo/stock.html
@@ -21,6 +21,7 @@
       <a href="scrapbook1.html"> Libros</a>
       <a href="fotografias.html"> Fotos</a>
       <a href="telas.html"> Telas</a>
+      <a href="ropa.html"> Ropa</a>
       <a href="maquinas.html"> Papel</a>
       <a href="diapos.html"> Diapos</a>
       <a href="misc.html">Misc</a>
