--- a/collage.html
+++ b/collage.html
@@ -6,7 +6,7 @@
   <meta http-equiv="" X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="img/html.ico">
-  <link rel="STYLESHEET" href="css/collage.css">
+  <link rel="STYLESHEET" href="css/cachuzo.css">
   <title>Collage</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,11 +26,12 @@
     </nav>
 
     <main class="main">
-      <div>
+      
+      <br><br> <br><br>
+     </main> 
+  </div>
 
-      </div>
-
-    </main>
+  
 
   </div>
 </body>
