Cachuzo agregado mas papel y nav 7 botones

--- a/collage.html
+++ b/collage.html
@@ -6,7 +6,7 @@
   <meta http-equiv="" X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="img/html.ico">
-  <link rel="STYLESHEET" href="css/cachuzo.css">
+  <link rel="STYLESHEET" href="cachuzo/css/cachuzo.css">
   <title>Collage</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,9 @@
       <a href="cachuzo/scrapbook1.html"> Libros</a>
       <a href="cachuzo/fotografias.html"> Fotos</a>
       <a href="cachuzo/telas.html"> Telas</a>
+      <a href="cachuzo/ropa.html"> Ropa</a>
       <a href="cachuzo/maquinas.html"> Papel</a>
+      <a href="cachuzo/diapos.html"> Diapos</a>
       <a href="cachuzo/misc.html">Misc</a>
     </nav>
 
