--- a/cachuzo/maquinas.html
+++ b/cachuzo/maquinas.html
@@ -48,186 +48,260 @@
         </div>
 
         <br><br><br>
-        <h3>maquinas</h3>
-        <br><br><br>
-        <div class="imagenes">
-          <div>
-            <img src="img/maquinas/01.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
+        <img src="img/papel/A or B --A.jpg" style="width:100%" style="height:40%">
+        <div class="text">A ó B? A</div>
 
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/02.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/03.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/05.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/06.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/07.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/08.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/09.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/10.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/11.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/12.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/13.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/14.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/15.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/16.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/17.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/18.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/19.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/20.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/21.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/22.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/23.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/24.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/25.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/26.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/27.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/28.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/29.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
-            <img src="img/maquinas/30.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
+        <br><br> <br><br>
+        <div>
+          <img src="img/papel/A or B --B.jpg" style="width:100%" style="height:40%">
+          <div class="text">A ó B? B</div>
         </div>
+        <br><br> <br><br>
       </div>
-    </main>
+
+      <br><br><br>
+
+      <div>
+        <img src="img/papel/Lolita 2.0.jpg" style="width:100%" style="height:40%">
+        <div class="text">Lolita 2.0</div>
+      </div>
+      <br><br> <br><br>
+
+      <br><br><br>
+
+      <div>
+        <img src="img/papel/pequeña nada.jpg" style="width:100%" style="height:40%">
+        <div class="text">Pequeña nada (en Colección privada)</div>
+      </div>
+      <br><br> <br><br>
+
+      <div>
+        <img src="img/papel/hug.jpg" style="width:100%" style="height:40%">
+        <div class="text">hug</div>
+      </div>
+      <br><br> <br><br>
+
+      <div>
+        <img src="img/papel/Migrantes.jpg" style="width:100%" style="height:40%">
+        <div class="text">Migrantes</div>
+      </div>
+      <br><br> <br><br>
+
+
+      <div>
+        <img src="img/papel/Fortress.jpg" style="width:100%" style="height:40%">
+        <div class="text">Fortress</div>
+      </div>
+      <br><br> <br><br>
+
+      <div>
+        <img src="img/papel/3 meses al año.jpg" style="width:100%" style="height:40%">
+        <div class="text">3 meses al año</div>
+      </div>
+      <br><br> <br><br>
+
+      <div>
+        <img src="img/papel/Femina Revolucionario.jpg" style="width:100%" style="height:40%">
+        <div class="text">Femina Revolucionario</div>
+      </div>
+      <br><br> <br><br>
+
+      <div>
+        <img src="img/papel/Life Story.jpg" style="width:100%" style="height:40%">
+        <div class="text">Life Story</div>
+      </div>
+      <br><br> <br><br>
+
+      <div>
+        <img src="img/papel/Suburbio.jpg" style="width:100%" style="height:40%">
+        <div class="text">Suburbio</div>
+      </div>
+      <br><br> <br><br>
+
+      <div>
+        <img src="img/papel/Spiderman.jpg" style="width:100%" style="height:40%">
+        <div class="text">Spiderman</div>
+      </div>
+      <br><br> <br><br>
+
+
+
+
+      <br><br><br>
+      <h3>maquinas</h3>
+      <br><br><br>
+      <div class="imagenes">
+        <div>
+          <img src="img/maquinas/01.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/02.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/03.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/05.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/06.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/07.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/08.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/09.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/10.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/11.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/12.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/13.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/14.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/15.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/16.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/17.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/18.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/19.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/20.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/21.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/22.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/23.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/24.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/25.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/26.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/27.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/28.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+        <div> <!--PARA NETLIFY TIENE Q SER LA DIRECCION DE GITHUB COMPLETA-->
+          <img src="img/maquinas/29.jpg" style="width:100%" style="height:40%">
+          <div class="text"></div>
+        </div>
+        <br><br> <br><br>
+
+      </div>
+  </div>
+  </main>
   </div>
 </body>
 
