Cachuzo agregado diapo arco iris

--- a/cachuzo/diapos.html
+++ b/cachuzo/diapos.html
@@ -32,6 +32,13 @@
         <h3>Lugares que me invento (Diapos)</h3>
         <br><br><br>
         <div class="imagenes">
+         
+          <div>
+            <img src="img/diapos/arco iris .jpg" style="width:100%" style="height:40%">
+            <div class="text"></div>
+          </div>
+          <br><br> <br><br>
+         
           <div>
             <img src="img/diapos/1.jpg" style="width:100%" style="height:40%">
             <div class="text"></div>
