Cachuzo agregado papel otros collage

--- a/cachuzo/maquinas.html
+++ b/cachuzo/maquinas.html
@@ -124,8 +124,23 @@
       </div>
       <br><br> <br><br>
 
+      <div>
+        <img src="img/papel/Y arte.jpg" style="width:100%" style="height:40%">
+        <div class="text">...Y arte</div>
+      </div>
+      <br><br> <br><br>
 
+      <div>
+        <img src="img/papel/Urbe.jpg" style="width:100%" style="height:40%">
+        <div class="text">Urbe</div>
+      </div>
+      <br><br> <br><br>
 
+      <div>
+        <img src="img/papel/While you go to a meeting.jpg" style="width:100%" style="height:40%">
+        <div class="text">While you go to a meeting</div>
+      </div>
+      <br><br> <br><br>
 
       <br><br><br>
       <h3>maquinas</h3>
