--- a/cachuzo/diapos.html
+++ b/cachuzo/diapos.html
@@ -35,7 +35,7 @@
          
           <div>
             <img src="img/diapos/arco iris .jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
+            <div class="text"><h1>Me encantan los autos viejos</h1></div>
           </div>
           <br><br> <br><br>
          
@@ -77,25 +77,26 @@
 
           <div>
             <img src="img/diapos/8.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
+            <div class="text"><h1>Y porque el barquito flota?</h1></div>
           </div>
           <br><br> <br><br>
 
           <div>
             <img src="img/diapos/9.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
+            <div class="text"><h1>La encumbrada burocracia, la política de base y los símbolos proletarios. Ponele.</h1>
+            </h1></div>
           </div>
           <br><br> <br><br>
 
           <div>
             <img src="img/diapos/10.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
+            <div class="text"><h1>El reflejo del arbol en el agua</h1></div>
           </div>
           <br><br> <br><br>
 
           <div>
             <img src="img/diapos/11.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
+            <div class="text"><h1>Rara, sucia y extraña. La invitaré a salir.</h1></div>
           </div>
           <br><br> <br><br>
 
@@ -107,31 +108,25 @@
 
           <div>
             <img src="img/diapos/13.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
-          </div>
-          <br><br> <br><br>
-
-          <div>
-            <img src="img/diapos/14.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
+            <div class="text"><h1>El gigante de vacaciones </h1></div>
           </div>
           <br><br> <br><br>
 
           <div>
             <img src="img/diapos/15.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
+            <div class="text"><h1>Debería ser confusa, sin embargo no lo es</h1></div>
           </div>
           <br><br> <br><br>
 
           <div>
             <img src="img/diapos/16.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
+            <div class="text">  </div>
           </div>
           <br><br> <br><br>
 
           <div>
             <img src="img/diapos/17.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
+            <div class="text"><h1>Looks like a painting</h1></div>
           </div>
           <br><br> <br><br>
 
@@ -143,13 +138,13 @@
 
           <div>
             <img src="img/diapos/19.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
+            <div class="text"><h1>Ni yo le encuentro el truco a esta</h1></div>
           </div>
           <br><br> <br><br>
 
           <div>
             <img src="img/diapos/20.jpg" style="width:100%" style="height:40%">
-            <div class="text"></div>
+            <div class="text"><h1>Derecha abajo. Aparece un texto. Incertidumbre de porque.</h1></div>
           </div>
           <br><br> <br><br>
 
