BRAZIL CORRECCIONES Y BAJO TONEJS LINK

--- a/TonejsTest.html
+++ b/TonejsTest.html
@@ -28,6 +28,9 @@
 <div>
     <nav class="nav__btn" id="nav__btn">
         <div>
+
+            <a href="brazil_2050.html"> brazil 2050</a>
+<br><br><br>
             <a href="2 OSC STEREO PANNED.html"> 2osc</a>
             <a href="ASCommando.html"> ASCommando</a>
             <a href="Seq.html"> Seq</a>
