--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -92,9 +92,9 @@
       <a name="uno">1</a>
       
     <!--  <div>1 FALTA: Load PROGRESS BAR// CHANGE POSITION WHEN USING SLIDER </div>-->
- 
+
     <div> 
-        <label id="ruta_archivo_label"> <input type="file" id="ruta_archivo"> </label> 
+<!--  -->         <label id="ruta_archivo_label">  <input type="file" id="ruta_archivo"> </label> 
  </div>
 
       <div class="audio_controls" id="audio_controls">
@@ -163,7 +163,7 @@
         <input type='range' min=0 max=1 step='0.01' value=0 id='current_2' onclick="control_2_current()">
         <p id="duration_2_text"></p>
         <p id="duration_2_value"></p>
-        <div> <input type="file" id="ruta_archivo2"> </div>
+         <div> <!--<input type="file" id="ruta_archivo2"> --></div>  
       </div>
       <div>3</div>
       <div class="audio_controls" id="audio_controls2">
@@ -193,7 +193,7 @@
           <p id="duration_3_text"></p>
           <p id="duration_3_value"></p>
         </div>
-        <div> <input type="file" id="ruta_archivo3"> </div>
+        <div> <!-- <input type="file" id="ruta_archivo3"> --></div>  
       </div>
       <div>4</div>
       <div class="audio_controls" id="audio_controls4">
@@ -223,7 +223,7 @@
           <p id="duration_4_text"></p>
           <p id="duration_4_value"></p>
         </div>
-        <div> <input type="file" id="ruta_archivo4"> </div>
+         <div><!--  <input type="file" id="ruta_archivo4"> --></div> 
       </div>
     </main>
    <!--
