TONEJS TEST 2DO 2osc + vol + pan + eq+ dly fallido

--- a/TonejsTest 2DO.html
+++ b/TonejsTest 2DO.html
@@ -21,7 +21,14 @@
 
 <body>
     <main>
-        <audio src="https://juliavra.github.io/Producer_E87_webSite/audio/03 Phased Sleppy Noise Loop.mp3"></audio>
+       <!-- <audio src="https://juliavra.github.io/Producer_E87_webSite/audio/03 Phased Sleppy Noise Loop.mp3"></audio>
+-->
+        <p id="player_1_label">p1</p>
+        <audio id="myAudio"> 
+          <source src="" type="audio/mpeg" id="snd_header">
+        </audio>
+
+
 
         <br><br><br>
         <button id="starts_context" onclick="startOscillator()">START</button>
