puesta a punto osc2 y Tonetest.js

--- a/TonejsTest.html
+++ b/TonejsTest.html
@@ -16,7 +16,7 @@
 <style>
     .waiting_title {
         font-size: 8rem;
-        background-color: rgba(33, 16, 139, 0.5);
+        background-color: rgba(16, 139, 51, 0.5);
     }
 </style>
 
@@ -35,8 +35,9 @@
             <a href="ASCommando.html"> ASCommando</a>
             <a href="Seq.html"> Seq</a>
             <a href="latest.html"> latest</a>
-            <a href="tone.html"> Tone</a>
-            <a href="tone2.html"> Tone2</a>
+            <a href="tone.html"> Sublow</a>
+            <a href="tone2.html"> Melo</a>
+            <a href="toneNovember.html"> November</a>
         </div>
         <div>
             <a href="SintesVarios.html"> AMSynth</a>
