--- a/htmDePruebas.html
+++ b/htmDePruebas.html
@@ -7,12 +7,12 @@
     <title>Web Audio API Example</title>
 </head>
 <body>
-    <h1>Tone.js sublow song</h1>
+    <h1>Tone.js Test</h1>
 
     <button id="playButton" onclick="startsSong()">Iniciar </button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js" integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="js/sublow.js"></script>
+    <script src="js/htmDePruebas.js"></script>
     <!--
     <script src="https://unpkg.com/tone"></script>
     -->
