CAMBIOS VARIOS A SINTES

--- a/2 OSC STEREO PANNED.html
+++ b/2 OSC STEREO PANNED.html
@@ -9,30 +9,13 @@
 <body>
 
   <h1>2 OSC</h1>
+  <h1>
+  Left = 79 Hz.
+  Right = 80 Hz.
+</h1>
   <br>
 
-
-  <label for="volume_osc1_label">Volumen OSC 1:</label>
-  <input type="range" id="volume_osc1" min="0" max="100" step="1" value="-27">
-  <span id="volumeValue_osc1">0</span>
-
-
-  <label for="volume_osc2_label">Volumen OSC 2:</label>
-  <input type="range" id="volume_osc2" min="0" max="100" step="1" value="-27">
-  <span id="volumeValue_osc2">0</span>
-
-
-
-
-
-  <br>
   <button onclick="startsSong()">Iniciar </button>
-  <br>
-
-  <br>
- 
-  <br>
-
   <script src="js/2oscSTPanned.js">    </script>
 
 </body>
