--- a/5 OSC STEREO PANNED.html
+++ b/5 OSC STEREO PANNED.html
@@ -4,15 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>2 OSC</title>
 </head>
 <body>
 
-  <h1>latest</h1>
+  <h1>5 OSC</h1>
+  <h1>
+  80 Hz. => 100% Left <br>
+  78 Hz. => 100% Right<br>
+  100 Hz. => 30% Left<br>
+  102 Hz. => 46% Right<br>
+  22 Hz. => Center
+</h1>
   <br>
-  <br><br>
+
   <button onclick="startsSong()">Iniciar </button>
-  <script src="js/latest.js">    </script>
+  <script src="js/5oscSTPanned.js">    </script>
+
 </body>
 </html>
 
