--- a/TonejsTest.html
+++ b/TonejsTest.html
@@ -20,26 +20,38 @@
     }
 </style>
 
-<div class="waiting_title">
+<div class="ProducerE87_Tag">
     Producer E87
 </div>
 
 
 <div>
+    <div id="label">Html+Css+Js</div>
+    <nav class="nav__btn" id="nav__btn">
+        <div>
+            <a href="brazil_2050.html"> brazil 2050</a> <br>
+        </div>
+    </nav>
+    <br><br>
+    |<div id="label">Web Audio Api</div>
+    <nav class="nav__btn" id="nav__btn">
+        <div>
+            <a href="2 OSC STEREO PANNED.html"> 2osc</a> <br>
+        </div>
+        <div> <a href="5 OSC STEREO PANNED.html"> 5osc</a> <br></div>
+        <div> <a href="ASCommando.html"> ASCommando</a><br>
+            <a href="Seq.html"> Seq</a> <br> 
+        </div>
+    </nav>
+    <br><br>
+    <div id="label">ToneJs Library</div>
     <nav class="nav__btn" id="nav__btn">
         <div>
 
-            <a href="brazil_2050.html"> brazil 2050</a>
-<br><br><br>
-            <a href="2 OSC STEREO PANNED.html"> 2osc</a>
-            <a href="ASCommando.html"> ASCommando</a>
-            <a href="Seq.html"> Seq</a>
-            <a href="latest.html"> latest</a>
-            <a href="tone.html"> Sublow</a>
-            <a href="tone2.html"> Melo</a>
-            <a href="toneNovember.html"> November</a>
-        </div>
-        <div>
+            <a href="latest.html"> latest</a> <br>
+            <a href="tone.html"> Sublow</a> <br>
+            <a href="tone2.html"> Melo</a> <br>
+            <a href="toneNovember.html"> November</a> <br>
             <a href="SintesVarios.html"> AMSynth</a>
 
         </div>
@@ -52,5 +64,3 @@
 
     </main>
 </body>
-
-
