Reorganizacion TonejsTest.html

--- a/ASCommando.html
+++ b/ASCommando.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aaron Scwarz commando</title>
+  <title>Aaron Scwarz Commando</title>
 </head>
 <body>
-
   <h1>Aaron Scwarz Commando</h1>
-
+  <h1>1 Oscilador, su control de frecuencia, su control de  volumen, inicio y parada </h1>  
+  
   <label for="frequency">Frecuencia:</label>
   <input type="range" id="frequency" min="20" max="20000" value="40">
   <span id="frequencyValue">40 Hz</span>
