--- a/SintesVarios.html
+++ b/SintesVarios.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-  <h1>Sintes Varios</h1>
+  <h1>Píiiiiuuuuuu</h1>
   <br>
-
+  
   <label for="volume">Volumen:</label>
   <input type="range" id="volume" min="0" max="100" step="1" value="50">
   <span id="volumeValue">50</span>
