--- a/TonejsTest.html
+++ b/TonejsTest.html
@@ -26,34 +26,43 @@
 
 
 <div>
+    <!--
     <div id="label">Html+Css+Js</div>
     <nav class="nav__btn" id="nav__btn">
         <div>
             <a href="brazil_2050.html"> brazil 2050</a> <br>
         </div>
     </nav>
-    <br><br>
+   
+    <br><br> -->
+    <!--
     |<div id="label">Web Audio Api</div>
     <nav class="nav__btn" id="nav__btn">
         <div>
             <a href="2 OSC STEREO PANNED.html"> 2osc</a> <br>
         </div>
         <div> <a href="5 OSC STEREO PANNED.html"> 5osc</a> <br></div>
+        <div> <a href="20 HZ OSC STEREO PANNED.html"> Out of phase 20 hz</a> <br></div>
         <div> <a href="ASCommando.html"> ASCommando</a><br>
             <a href="Seq.html"> Seq</a> <br> 
         </div>
     </nav>
+    -->
     <br><br>
     <div id="label">ToneJs Library</div>
     <nav class="nav__btn" id="nav__btn">
         <div>
-
-            <a href="latest.html"> latest</a> <br>
-            <a href="tone.html"> Sublow</a> <br>
-            <a href="tone2.html"> Melo</a> <br>
-            <a href="toneNovember.html"> November</a> <br>
-            <a href="SintesVarios.html"> AMSynth</a>
-
+        <!--     <a href="latest.html"> latest</a> <br>
+        -->
+        <a href="toneNovember.html"> November</a> <br>    
+        <a href="sublow.html"> Sublow</a> <br>
+        <a href="etereal_noises.html"> Etereal noises</a> <br>
+        <a href="slownlow.html"> Slow n low</a> <br>
+        
+            
+          <!--      <a href="SintesVarios.html"> AMSynth</a>
+                    <a href="tone2.html"> Melo</a> <br>  
+          -->
         </div>
     </nav>
 </div>
