--- a/etereal_noises.html
+++ b/etereal_noises.html
@@ -7,7 +7,7 @@
     <title>Web Audio API Example</title>
 </head>
 <body>
-    <h1>Tone.js Test</h1>
+    <h1>etereal_noises</h1>
 
     <button id="playButton" onclick="startsSong()">Iniciar </button>
 
