--- a/htmDePruebas.html
+++ b/htmDePruebas.html
@@ -7,9 +7,18 @@
     <title>Web Audio API Example</title>
 </head>
 <body>
-    <h1>Tone.js Test</h1>
+    <h1>Tone.js Test Volumen</h1>
 
     <button id="playButton" onclick="startsSong()">Iniciar </button>
+
+
+    <p id="volume_key_text"></p>
+    <p id="volume_key_value"></p>
+    <input type='range' min=0 max=1 step='0.01' value=1 id='volume_key'>
+    <br>
+
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js" integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/htmDePruebas.js"></script>
